--- a/style.css
+++ b/style.css
@@ -57,3 +57,55 @@ body{
     transition: 1s;
     cursor: pointer;
 }
+
+/* Donation Section */
+#donation{
+    height: 100vh;
+    background-color: lightgray;
+}
+
+.donation-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding-top: 3%;
+    flex: 20px;
+}
+
+.donation-text p{
+   width: 70%;
+   padding-top: 30px; 
+}
+.amount{
+    display: flex;
+    margin: 30px;
+}
+
+.medium{
+    padding: 20px;
+    margin: 10px;
+    font-size: 25px;
+    border: 2px solid gray;
+    border-radius: 6px;
+    background-color: bisque;
+}
+
+.highlight{
+    border: 2px solid #405cf5;
+    color: #fff;
+    border-radius: 6px;
+    background-color: rgb(255, 148, 148);
+}
+
+.amount-input{
+    text-align: center;
+    padding-top: 50px;
+    border: none;
+    width: 400px;
+    border-bottom: 2px solid gray;
+    background-color: lightgray;
+    font-size: 16px;
+    font-weight: bold;
+    color: red;
+}
