--- a/style.css
+++ b/style.css
@@ -109,3 +109,152 @@ body{
     font-weight: bold;
     color: red;
 }
+#plan-donation{
+    height: 50vh;
+    /* background-color: azure; */
+    display: flex;
+    /* flex-direction: column; */
+}
+.plan-text{
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+.card{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 2%;
+    padding: 2%;
+    /* width: 27%; */
+}
+.card h3{
+    padding: 20px;
+}
+.card-1{
+    background-color: cadetblue;
+    border-radius: 5px;
+}
+
+.card-2{
+    background-color: coral;
+    border-radius: 5px;
+}
+
+.card-3{
+    background-color: lightgreen;
+    border-radius: 5px;
+}
+
+.blog{
+    display: flex;
+    margin-top: 50px;
+    padding-top: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#image-gallary{
+    margin-top: 5px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.showcase{
+    background-color: #dadff7;
+    width: 30%;
+    height: 500px;
+    margin: 10px;
+    border-radius: 16px;
+}
+
+.showcase h2{
+    padding: 10px;
+}
+
+.showcase p{
+    padding: 10px;
+}
+.card-image{
+    background-color: lightpink;
+    height: 170px;
+    margin-bottom: 15px;
+    background-size: cover;
+}
+
+.showcase a{
+    background-color: #333;
+    color: #fff;
+    padding: 15px 20px;
+    display: block;
+    text-align: center;
+}
+.image-1{
+    background-image: url('images/donation1.jpg');
+}
+
+.image-2{
+    background-image: url('images/donation2.jpg');
+}
+
+.image-3{
+    background-image: url('images/donation3.jpg');
+}
+
+#sponsorship{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+    padding: 20px;
+}
+.form-area{
+    background-color: coral;
+    width: 70vw;
+    height: 20vh;
+}
+.islamic-text{
+    margin-bottom: 50px;
+}
+label{
+    position: relative;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+input{
+    border: 2px solid goldenrod;
+    padding: 15px;
+    width: 720px;
+}
+
+.btn-subscribe{
+    position: absolute;
+    border: none;
+    padding: 17px;
+    background-color: #405cf5;
+    color: #fff;
+    width: 200px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.site-footer{
+    background-color: #777;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.site-footer small{
+    color: #dadff7;
+}
